writ-compiler/tests/snapshots/lowering_tests__entity_multiple_use_clauses.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [],
                component_slots: [
                    AstComponentSlot {
                        component: "Health",
                        component_span: 19..25,
                        overrides: [
                            (
                                "current",
                                28..35,
                                IntLit {
                                    value: 80,
                                    span: 37..39,
                                },
                            ),
                        ],
                        span: 15..42,
                    },
                    AstComponentSlot {
                        component: "Sprite",
                        component_span: 47..53,
                        overrides: [
                            (
                                "image",
                                56..61,
                                StringLit {
                                    value: "guard.png",
                                    span: 63..74,
                                },
                            ),
                        ],
                        span: 43..76,
                    },
                ],
                hooks: [],
                inherent_impl: None,
                span: 0..78,
            },
        ),
    ],
}
