writ-compiler/tests/snapshots/lowering_tests__entity_property_component_collision_error.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: "(ast, errors)"
---
(
    Ast {
        items: [
            Entity(
                AstEntityDecl {
                    attrs: [],
                    vis: None,
                    name: "Guard",
                    name_span: 7..12,
                    properties: [
                        AstStructField {
                            vis: None,
                            is_mutable: false,
                            name: "Health",
                            name_span: 15..21,
                            ty: Named {
                                name: "int",
                                span: 23..26,
                            },
                            default: None,
                            span: 15..27,
                        },
                    ],
                    component_slots: [],
                    hooks: [],
                    inherent_impl: None,
                    span: 0..56,
                },
            ),
        ],
    },
    [
        PropertyComponentCollision {
            name: "Health",
            entity: "Guard",
            span: 32..38,
        },
    ],
)
