writ-compiler/tests/snapshots/lowering_tests__entity_singleton_attribute.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [
                    AstAttribute {
                        name: "Singleton",
                        name_span: 1..10,
                        args: [],
                        span: 0..11,
                    },
                ],
                vis: None,
                name: "Narrator",
                name_span: 19..27,
                properties: [
                    AstStructField {
                        vis: None,
                        is_mutable: false,
                        name: "name",
                        name_span: 30..34,
                        ty: Named {
                            name: "string",
                            span: 36..42,
                        },
                        default: None,
                        span: 30..42,
                    },
                ],
                component_slots: [],
                hooks: [],
                inherent_impl: None,
                span: 12..44,
            },
        ),
    ],
}
