writ-compiler/tests/snapshots/lowering_tests__entity_unknown_lifecycle_event_error.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: "(ast, errors)"
---
(
    Ast {
        items: [
            Entity(
                AstEntityDecl {
                    attrs: [],
                    vis: None,
                    name: "Guard",
                    name_span: 7..12,
                    properties: [],
                    component_slots: [],
                    hooks: [],
                    inherent_impl: None,
                    span: 0..31,
                },
            ),
        ],
    },
    [
        UnknownLifecycleEvent {
            event: "explode",
            span: 18..25,
        },
    ],
)
