writ-compiler/tests/snapshots/lowering_tests__fmt_string_no_interpolation.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "f",
                name_span: 3..4,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Let {
                        mutable: false,
                        name: "x",
                        name_span: 13..14,
                        ty: None,
                        value: StringLit {
                            value: "plain string",
                            span: 19..31,
                        },
                        span: 9..33,
                    },
                ],
                span: 0..35,
            },
        ),
    ],
}
